1999-07-15  Matthew D. Langston  <langston@SLAC.Stanford.EDU>

	* acspecific.m4 (AC_F77_LIBRARY_LDFLAGS): New implementation, to
	make maintenance easier.
	Grep the initial output so that we don't start parsing "-l" and
	"-L" too early.  From Christopher Lee <chrislee@ri.cmu.edu>

1999-06-09  Matthew D. Langston  <langston@SLAC.Stanford.EDU>

	* autoconf.texi (Pretty Help Strings): Synchronize documentation
	with implementation.

1999-06-04  Matthew D. Langston  <langston@SLAC.Stanford.EDU>

	* acgeneral.m4 (AC_OUTPUT_MAKE_DEFS): Fix sed regexp for handling
	CPP macros with args.

1999-06-03  Ben Elliston  <bje@cygnus.com>

	* acgeneral.m4 (AC_ACVERSION): Correct version number.
	* autoconf.texi (EDITION): Likewise.
	(VERSION): Likewise.

1999-06-02  Matthew D. Langston  <langston@SLAC.Stanford.EDU>

	* autoconf.texi (Pretty Help Strings): Document and regenerate the
	indices.
	* acgeneral.m4 (AC_HELP_STRING): New macro.

	* NEWS: Begin documenting "Major changes" for release 2.14.

	* acconfig.h (F77_FUNC): Add.
	(F77_FUNC_): Likewise.

1999-06-01  Akim Demaille  <demaille@inf.enst.fr>

	* acgeneral.m4 (AC_PREFIX_PROGRAM): Use macros of the AC_TR_
	family.
	(AC_HAVE_LIBRARY): Likewise.
	(AC_CHECK_FUNCS): Likewise.
	(AC_CHECK_FILES): Likewise.
	(AC_CHECK_SIZEOF): Likewise.

	* acgeneral.m4 (AC_TR): New macro which performs transliteration
	by m4 when possible, or by `tr' at configure time.
	(AC_TR_UPCASE_NAME): New macro, transliteration 'a-z' to 'A-Z'.
	(AC_TR_UPCASE_FILE): New macro, transliteration 'a-z./-' to
	'A-Z___'.
	(AC_TR_SH): New macro, transliteration to valid sh var name.

	* acgeneral.m4 (_AC_SH_QUOTE): New macro which protects non
	protected backquotes against shell expansion.
	(AC_MSG_CHECKING): Use it.
	(AC_CHECKING): Use it.
	(AC_MSG_RESULT): Use it.
	(AC_VERBOSE): Use it.
	(AC_MSG_WARN): Use it.
	(AC_MSG_ERROR): Use it.

	* acgeneral.m4 (_AC_MESSAGE): New macro to report message at m4
	time.