@@ -5,6 +5,10 @@
 	Grep the initial output so that we don't start parsing "-l" and
 	"-L" too early.  From Christopher Lee <chrislee@ri.cmu.edu>
 
+	* acgeneral.m4 (AC_LIST_MEMBER_OF): New "private implementation
+	macro" use by AC_F77_LIBRARY_LDFLAGS.
+	(AC_LINKER_OPTION): Likewise.
+	
 1999-06-09  Matthew D. Langston  <langston@SLAC.Stanford.EDU>
 
 	* autoconf.texi (Pretty Help Strings): Synchronize documentation
